--- a/views/admin/item/detail_item/show_feature.ejs
+++ b/views/admin/item/detail_item/show_feature.ejs
@@ -40,7 +40,8 @@
                                     <td><%= i + 1 %></td>
                                     <td><%= feature[i].name %></td>
                                     <td><%= feature[i].qty %></td>
-                                    <td><img src="http://localhost:3000/<%= feature[i].imageUrl %>" alt=""></td>
+                                    <td><img src="https://admin-staycation-lymanto.herokuapp.com/<%= feature[i].imageUrl %>"
+                                            alt=""></td>
                                     <td>
                                         <form
                                             action="/admin/item/<%= itemId %>/feature/<%= feature[i].id %>?_method=DELETE"
