view_booking repair code

--- a/views/admin/booking/view_booking.ejs
+++ b/views/admin/booking/view_booking.ejs
@@ -18,7 +18,7 @@
                 <h1 class="h3 mb-4 text-gray-800">Booking</h1>
                 <!-- End Heading -->
 
-                <%- include('table_Booking.ejs') %>
+                <%- include('table_booking.ejs') %>
 
 
             </div>
